--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ matrix:
  allow_failures:
  - julia: nightly
 
+branches:
+  only:
+    - master
+
 ## uncomment and modify the following lines to manually install system packages
 #addons:
 #  apt: # apt-get for linux
