--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,20 @@
-## Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
   - linux
   - osx
 julia:
   - 0.6
+  - 1.0
   - nightly
+matrix:
+  allow_failures:
+    - julia: nightly
+branches:
+  only:
+    - master
+    - /^v[0-9]+\.[0-9]+\.[0-9]+$/ # version tags
 notifications:
   email: false
-git:
-  depth: 99999999
-
-# uncomment the following lines to allow failures on nightly julia
-# (tests will run but not make your overall status red)
-matrix:
- allow_failures:
- - julia: nightly
-
-## uncomment and modify the following lines to manually install system packages
-#addons:
-#  apt: # apt-get for linux
-#    packages:
-#    - gfortran
-#before_script: # homebrew for mac
-#  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
-
-## uncomment the following lines to override the default test script
-#script:
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("CouenneNL"); Pkg.test("CouenneNL"; coverage=true)'
+sudo: false
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("CouenneNL")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-  # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("CouenneNL")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+- julia -e 'if VERSION >= v"0.7-"; using Pkg; else; cd(Pkg.dir("CouenneNL")); end; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
