--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ os:
   - linux
   - osx
 julia:
-  - 0.6
+  - 0.7
   - 1.0
+  - 1.1
   - nightly
 matrix:
   allow_failures:
@@ -15,6 +16,5 @@ branches:
     - /^v[0-9]+\.[0-9]+\.[0-9]+$/ # version tags
 notifications:
   email: false
-sudo: false
 after_success:
-- julia -e 'if VERSION >= v"0.7-"; using Pkg; else; cd(Pkg.dir("CouenneNL")); end; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+- julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
